[package]
name = "rabe-bn"
version = "0.4.12"
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Bramm, Georg <georg.bramm@aisec.fraunhofer.de>"
]
description = "Pairing cryptography with the Barreto-Naehrig curve. Update to use latest rand and serde crates."
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
homepage = "https://github.com/georgbramm/rabe-bn"
repository = "https://github.com/georgbramm/rabe-bn"
documentation = "https://docs.rs/rabe-bn"
license = "MIT OR Apache-2.0"
exclude = ["bn.iml", "/.idea"]

[[bench]]
name = "api"

[dependencies]
byteorder = { version = "1.4.2", default-features = false }
rand = {version = "0.7.3", default-features = false }
serde = { version = "1.0.118", default-features = false }
serde_derive = { version = "1.0.118", default-features = false }
heapless = "0.5.6"

#[dev-dependencies.bincode]
#version = "1.0.0"
#default-features = false

[dev-dependencies]
rand = "0.7.3"

[features]
default = [ "std" ]

std = [ "alloc" ]
alloc = []
